tests/baselines/reference/jsdocImplements_properties.errors.txt
/a.js(3,7): error TS2720: Class 'B' incorrectly implements class 'A'. Did you mean to extend 'A' and inherit its members as a subclass?
  Property 'x' is missing in type 'B' but required in type 'A'.


==== /a.js (1 errors) ====
    class A { constructor() { this.x = 0; } }
    /** @implements A*/
    class B {}
          ~
!!! error TS2720: Class 'B' incorrectly implements class 'A'. Did you mean to extend 'A' and inherit its members as a subclass?
!!! error TS2720:   Property 'x' is missing in type 'B' but required in type 'A'.
!!! related TS2728 /a.js:1:27: 'x' is declared here.
    
    /** @implements A*/
    class B2 {
        x = 10
    }
    
    /** @implements {A}*/
    class B3 {
        constructor() { this.x = 10 }
    }
    